# vdoe

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: basis_gp.py  etk-dense.py  etk.py
tests/: conftest.py  test_np.py
vdoe/: __init__.py
vdoe/inference/: __init__.py  fast_neural_process.py  neural_process.py
vdoe/nn/: mlp.py  resnet.py
vdoe/utils/: io.py
