# pyproject.toml

[build-system]
requires      = ['setuptools>=61.0.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'vdoe'
version = '0.0.1'
description = 'Variational Design of Experiments'
readme = {file = 'README.md', content-type = 'text/markdown'}
authors = [{ name = 'Maxim Borisyak', email = 'maximus.been@gmail.com' }]
license = { file = 'LICENSE' }
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
]
keywords = ['jax', 'machine learning']
dependencies = [
    'numpy>=1.25.0',
    'jax>=0.4.0',
    'flax>=0.10.0',
    'optax>=0.2.4',
]
requires-python = '>=3.9'

[project.optional-dependencies]
dev = [
    'pytest>=5.3.2',
]

[project.urls]
Homepage = 'https://github.com/mborisyak/vdoe'

[tool.setuptools.packages.find]
exclude = ['contrib', 'examples', 'docs', 'tests']
